chore: fixing skills section

--- a/generic/main.tex
+++ b/generic/main.tex
@@ -205,7 +205,7 @@ urlcolor=primaryColor
 
 
   \begin{onecolentry}
-    \textbf{Languages:} JavaScript, Typescript, Python, C\\#, C, SQL, Java, PHP, Bash
+    \textbf{Languages:} JavaScript, Typescript, Python, C\#, C, SQL, Java, PHP, Bash
   \end{onecolentry}
 
   \vspace{0.2 cm}
@@ -225,27 +225,13 @@ urlcolor=primaryColor
   \vspace{0.2 cm}
 
   \begin{onecolentry}
-    \textbf{Data eng: }  Airflow, Airbyte, dbt, Kafka, Spark
+    \textbf{Data eng \& Agentic AI: }  Airflow, Airbyte, dbt, Kafka, Spark, Langchain, LangGraph
   \end{onecolentry}
 
   \vspace{0.2 cm}
 
   \begin{onecolentry}
-    \textbf{Agentic AI frameworks:} LangChain, LangGraph, CrewAI, AutoGen
-  \end{onecolentry}
-
-  \vspace{0.2 cm}
-
-
-  \begin{onecolentry}
-    \textbf{Cloud:} AWS (EC2, S3, RDS, Lambda), GCP (Compute Engine, Cloud Storage, Cloud SQL)
-  \end{onecolentry}
-
-  \vspace{0.2 cm}
-
-
-  \begin{onecolentry}
-    \textbf{Infrastructure & DevOps:} Docker, Kubernetes, Terraform, Ansible, Vagrant, Jenkins, GitHub Actions
+    \textbf{Infrastructure, DevOps \& Cloud :} Docker, Kubernetes, Terraform, Ansible, Vagrant, Jenkins, GitHub Actions, AWS (EC2, S3, RDS, Lamdba)
   \end{onecolentry}
 
 
@@ -349,25 +335,22 @@ urlcolor=primaryColor
     }
   \textbf{Software Engineering Intern}, Nexits  -- Paris, FR\end{twocolentry}
 
-  \vspace{0.10 cm}
+  % \vspace{0.10 cm}
+
+
+
+  % Projects section 
 
   \section{Projects}
 
-
   \vspace{0.2 cm}
 
-  \begin{twocolentry}{
-      \href{https://github.com/sinaatalay/rendercv}{github.com/name/repo}
-    }
-  \textbf{Playpex}\end{twocolentry}
+
 
   \vspace{0.10 cm}
   \begin{onecolentry}
     \begin{highlights}
-\item Built a streaming torrent client in Node.js with a backend wrapper leveraging Media Source Extensions API for seamless browser playback.
-\item Designed a TV-like Angular interface optimized for remote and keyboard navigation, delivering a living-room experience.
-\item Bundled torrent streaming backend and services into a unified Electron application for cross-platform desktop use.
-\item Developed a companion Ionic mobile controller app, enabling real-time playback control via WebSockets.
+    \item \textbf{Playpex: } Built a torrent streamer in Node.js with a backend wrapper utilizing MSE API for seamless browser playback. Frontend developped in Angular. Electron to bundle the app for cross-platform and an ionic mobile app as a remote control.
 
                 \begin{highlightsforbulletentries}
     \item Technologies used: Node.js, Angular, Ionic, Electron
@@ -375,6 +358,7 @@ urlcolor=primaryColor
 
     \end{highlights}
   \end{onecolentry}
+  \vspace{0.2 cm}
 
 
 
